xcgui.nim


#~ ## ~ #define  XE_LISTVIEW_DRAG_INSERT
#~ ## ~ #define  XE_PANE_LOACK
#~ ## ~ #define  XE_PANE_DOCK
#~ ## ~ #define  XE_PANE_FLOAT
#~ ## ~ #define  XE_EDIT_CHANGE
#~ ## ~ ///@}
#~ ## ~
#~ ## ///////////////////////////////////////////////////////////////////////////////////
#~ ## ~
#~ ## /////////////事件注册//////////////////////////////////////////////////////////////
#~ ## ~
#~ ## ///////////////////////////////////////////////////////////////////////////////////
#~ ## ~ class bind_event_cpp
#~ ## ~ {
#~ ## ~ public:
#~ ## ~ virtual BOOL  Equal(bind_event_cpp* p)=0;
#~ ## ~ virtual void* GetThis()=0;
#~ ## ~ virtual void* GetMFun(int &nSize)=0;
#~ ## ~ virtual int HandleEvent(int regType, HELE hEle,HELE hEventEle, UINT nEvent, WPARAM wParam, LPARAM lParam, BOOL *pbHandled)=0;
#~ ## ~ virtual int HandleEventWnd(int regType, HWINDOW hWindow, UINT nEvent, WPARAM wParam, LPARAM lParam, BOOL *pbHandled)=0;
#~ ## ~ };
#~ ## ~ template<class R, class C, class F>
#~ ## ~ class bind_event_cpp_ : public bind_event_cpp
#~ ## ~ {
#~ ## ~ public:
#~ ## ~ bind_event_cpp_(C* c,F f) :_c(c), _f(f){ }
#~ ## ~ virtual BOOL Equal(bind_event_cpp* p){
#~ ## ~ if(_c!=p->GetThis())
#~ ## ~ return FALSE;
#~ ## ~ int size=0;
#~ ## ~ void*  f=p->GetMFun(size);
#~ ## ~ if(sizeof(F)==size)
#~ ## ~ {
#~ ## ~ if(0==memcmp(f,&_f, size))
#~ ## ~ return TRUE;
#~ ## ~ }
#~ ## ~ return FALSE;
#~ ## ~ }
#~ ## ~ virtual void* GetThis(){ return (void*)_c;}
#~ ## ~ virtual void* GetMFun(int &nSize){ nSize=sizeof(F); return &_f; }
#~ ## ~ template<class H,class A1>
#~ ## ~ int CallT( int (C::*f)(A1),int regType, H hEleOrWindow,H hEventEle, UINT nEvent, WPARAM wParam, LPARAM lParam, BOOL *pbHandled)
#~ ## ~ {
#~ ## ~ if(0==regType)
#~ ## ~ return (_c->*f)(pbHandled);
#~ ## ~ MessageBoxA(NULL,"HandleEvent_cpp_Call a1","error",0);
#~ ## ~ return 0;
#~ ## ~ }
#~ ## ~ template<class H,class A1,class A2>
#~ ## ~ int CallT( int (C::*f)(A1,A2),int regType, H hEleOrWindow,H hEventEle, UINT nEvent, WPARAM wParam, LPARAM lParam, BOOL *pbHandled)
#~ ## ~ {
#~ ## ~ if(0==regType)
#~ ## ~ return (_c->*f)((A1)wParam,pbHandled);
#~ ## ~ else if(1==regType)
#~ ## ~ return (_c->*f)((A1)hEventEle, pbHandled);
#~ ## ~ MessageBoxA(NULL,"HandleEvent_cpp_Call a2","error",0);
#~ ## ~ return 0;
#~ ## ~ }
#~ ## ~ template<class H,class A1,class A2,class A3>
#~ ## ~ int CallT( int (C::*f)(A1,A2,A3),int regType, H hEleOrWindow,H hEventEle, UINT nEvent, WPARAM wParam, LPARAM lParam, BOOL *pbHandled)
#~ ## ~ {
#~ ## ~ if(0==regType)
#~ ## ~ return (_c->*f)((A1)wParam, (A2)lParam,pbHandled);
#~ ## ~ else if(1==regType)
#~ ## ~ return (_c->*f)((A1)hEventEle, (A2)wParam,pbHandled);
#~ ## ~ else if(2==regType)
#~ ## ~ return (_c->*f)((A1)hEleOrWindow, (A2)hEventEle,pbHandled);
#~ ## ~ MessageBoxA(NULL,"HandleEvent_cpp_Call a3","error",0);
#~ ## ~ return 0;
#~ ## ~ }
#~ ## ~ template<class H,class A1,class A2,class A3,class A4>
#~ ## ~ int CallT( int (C::*f)(A1,A2,A3,A4),int regType, H hEleOrWindow,H hEventEle, UINT nEvent, WPARAM wParam, LPARAM lParam, BOOL *pbHandled)
#~ ## ~ {
#~ ## ~ if(0==regType)
#~ ## ~ return (_c->*f)((A1)nEvent, (A2)wParam, (A3)lParam,pbHandled);
#~ ## ~ if(1==regType)
#~ ## ~ return (_c->*f)((A1)hEventEle, (A2)wParam, (A3)lParam,pbHandled);
#~ ## ~ else if(2==regType)
#~ ## ~ return (_c->*f)((A1)hEleOrWindow,(A2)hEventEle, (A3)wParam,pbHandled);
#~ ## ~ MessageBoxA(NULL,"HandleEvent_cpp_Call a4","error",0);
#~ ## ~ return 0;
#~ ## ~ }
#~ ## ~ template<class H,class A1,class A2,class A3,class A4,class A5>
#~ ## ~ int CallT( int (C::*f)(A1,A2,A3,A4,A5),int regType, H hEleOrWindow,H hEventEle, UINT nEvent, WPARAM wParam, LPARAM lParam, BOOL *pbHandled)
#~ ## ~ {
#~ ## ~ if(1==regType)
#~ ## ~ return (_c->*f)((A1)hEventEle, (A2)nEvent, (A3)wParam, (A4)lParam, pbHandled);
#~ ## ~ else if(2==regType)
#~ ## ~ return (_c->*f)((A1)hEleOrWindow, (A2)hEventEle, (A3)wParam, (A4)lParam, pbHandled);
#~ ## ~ MessageBoxA(NULL,"HandleEvent_cpp_Call a5","error",0);
#~ ## ~ return 0;
#~ ## ~ }
#~ ## ~ virtual int HandleEvent(int regType, HELE hEle,HELE hEventEle, UINT nEvent, WPARAM wParam, LPARAM lParam, BOOL *pbHandled)
#~ ## ~ {
#~ ## ~ return CallT(_f,regType,hEle,hEventEle,nEvent,wParam,lParam,pbHandled);
#~ ## ~ }
#~ ## ~ virtual int HandleEventWnd(int regType, HWINDOW hWindow, UINT nEvent, WPARAM wParam, LPARAM lParam, BOOL *pbHandled)
#~ ## ~ {
#~ ## ~ return CallT(_f,regType,hWindow,hWindow,nEvent,wParam,lParam,pbHandled);
#~ ## ~ }
#~ ## ~ C*  _c;
#~ ## ~ F   _f;
#~ ## ~ };
#~ ## ~ struct bind_event_c
#~ ## ~ {
#~ ## ~ enum MyEnum
#~ ## ~ {
#~ ## ~ event_c_ex,
#~ ## ~ event_lua_ex,
#~ ## ~ event_js_ex,
#~ ## ~ } type;
#~ ## ~ virtual ~bind_event_c() {}
#~ ## ~ virtual BOOL Equal(bind_event_c* p) { return FALSE; };
#~ ## ~ virtual void*  GetFunc() { return nullptr; };
#~ ## ~ virtual int HandleEvent(int regType, HELE hEle, HELE hEventEle, UINT nEvent, WPARAM wParam, LPARAM lParam, BOOL *pbHandled) { return 0;  };
#~ ## ~ virtual int HandleEventWnd(int regType, HWINDOW hWindow, UINT nEvent, WPARAM wParam, LPARAM lParam, BOOL *pbHandled) { return 0; };
#~ ## ~ };
#~ ## ~ struct xc_event
#~ ## ~ {
#~ ## ~ xc_event(int regType,const char* pFunName){
#~ ## ~ m_pBind=0;
#~ ## ~ m_pFunC=0;
#~ ## ~ m_name[0]=0;
#~ ## ~ m_regType=regType;
#~ ## ~ if(pFunName) strcpy_s(m_name,pFunName);
#~ ## ~ }
#~ ## ~ int            m_regType;   //注册类型, 0:CPP,1:CPP1,2:CPP2
#~ ## ~ bind_event_cpp*  m_pBind;     //C++事件回调
#~ ## ~ bind_event_c*    m_pFunC;     //C事件回调
#~ ## ~ char           m_name[MAX_PATH]; //函数名
#~ ## ~ BOOL Equal(xc_event* pEvent){
#~ ## ~ if(m_pBind && pEvent->m_pBind)
#~ ## ~ return (m_pBind->Equal(pEvent->m_pBind));
#~ ## ~ if(m_pFunC && pEvent->m_pFunC)
#~ ## ~ return (m_pFunC->Equal(pEvent->m_pFunC));
#~ ## ~ return FALSE;
#~ ## ~ }
#~ ## ~ BOOL Equal(void* pFunc){
#~ ## ~ if(m_pFunC){
#~ ## ~ if(m_pFunC->GetFunc()==pFunc)
#~ ## ~ return TRUE;
#~ ## ~ }
#~ ## ~ return FALSE;
#~ ## ~ }
#~ ## ~ int HandleEvent(HELE hEle,HELE hEventEle, UINT nEvent, WPARAM wParam, LPARAM lParam, BOOL *pbHandled)
#~ ## ~ {
#~ ## ~ if(m_pBind)
#~ ## ~ return m_pBind->HandleEvent(m_regType,hEle,hEventEle,nEvent,wParam,lParam,pbHandled);
#~ ## ~ if(m_pFunC)
#~ ## ~ return m_pFunC->HandleEvent(m_regType,hEle,hEventEle, nEvent, wParam, lParam, pbHandled);
#~ ## ~ MessageBoxA(NULL,"HandleEvent()","error",0);
#~ ## ~ return 0;
#~ ## ~ }
#~ ## ~ int HandleEventWnd(HWINDOW hWindow, UINT nEvent, WPARAM wParam, LPARAM lParam, BOOL *pbHandled)
#~ ## ~ {
#~ ## ~ if(m_pBind)
#~ ## ~ return m_pBind->HandleEventWnd(m_regType,hWindow, nEvent,wParam,lParam,pbHandled);
#~ ## ~ if(m_pFunC)
#~ ## ~ return m_pFunC->HandleEventWnd(m_regType,hWindow, nEvent, wParam, lParam, pbHandled);
#~ ## ~ MessageBoxA(NULL,"HandleEventWnd()","error",0);
#~ ## ~ return 0;
#~ ## ~ }
#~ ## ~ char* GetFunName(){ return m_name; }
#~ ## ~ virtual void Release(){
#~ ## ~ if(m_pBind) delete m_pBind;
#~ ## ~ if(m_pFunC) delete m_pFunC;
#~ ## ~ delete this;
#~ ## ~ }
#~ ## ~ };
#~ ## ~ template<class R,class C,class F>
#~ ## ~ BOOL XEle_RegEventCPP_tt(HXCGUI hXCGUI, UINT nEvent,int regType, BOOL bEle, C* c, F f,const char* pFunName){
#~ ## ~ BOOL bResult=TRUE;
#~ ## ~ bind_event_cpp*  pBind=new bind_event_cpp_<R,C, F>(c, f);
#~ ## ~ xc_event*  pEvent=new xc_event(regType,pFunName);
#~ ## ~ pEvent->m_pBind=pBind;
#~ ## ~ if(-1==regType){
#~ ## ~ bResult=_XEle_RemoveEvent((HELE)hXCGUI, nEvent, pEvent);
#~ ## ~ pEvent->Release();
#~ ## ~ }else{
#~ ## ~ if(bEle){
#~ ## ~ if(FALSE==_XEle_RegEvent((HELE)hXCGUI, nEvent, pEvent))
#~ ## ~ {
#~ ## ~ pEvent->Release();
#~ ## ~ bResult=FALSE;
#~ ## ~ }
#~ ## ~ }else{
#~ ## ~ if(FALSE==_XWnd_RegEvent((HWINDOW)hXCGUI, nEvent, pEvent))
#~ ## ~ {
#~ ## ~ pEvent->Release();
#~ ## ~ bResult=FALSE;
#~ ## ~ }
#~ ## ~ }
#~ ## ~ }
#~ ## ~ return bResult;
#~ ## ~ }
#~ ## ~ template<class R, class C, class CT, class A1>
#~ ## ~ BOOL XCGUI_RegEventCPP_t(HXCGUI hXCGUI, UINT nEvent, int type, BOOL bEle, C* c, R (CT::*f)(A1), const char* pFunName){
#~ ## ~ return XEle_RegEventCPP_tt<R>(hXCGUI,nEvent,type,bEle,(CT*)c,f, pFunName);}
#~ ## ~ template<class R, class C, class CT, class A1, class A2>
#~ ## ~ BOOL XCGUI_RegEventCPP_t(HXCGUI hXCGUI, UINT nEvent, int type, BOOL bEle, C* c, R (CT::*f)(A1,A2), const char* pFunName){
#~ ## ~ return XEle_RegEventCPP_tt<R>(hXCGUI,nEvent,type,bEle,(CT*)c,f, pFunName);}
#~ ## ~ template<class R, class C, class CT, class A1, class A2, class A3>
#~ ## ~ BOOL XCGUI_RegEventCPP_t(HXCGUI hXCGUI, UINT nEvent, int type, BOOL bEle, C* c, R (CT::*f)(A1,A2,A3), const char* pFunName){
#~ ## ~ return XEle_RegEventCPP_tt<R>(hXCGUI,nEvent,type,bEle,(CT*)c,f, pFunName);}
#~ ## ~ template<class R, class C, class CT, class A1, class A2, class A3,class A4>
#~ ## ~ BOOL XCGUI_RegEventCPP_t(HXCGUI hXCGUI, UINT nEvent, int type, BOOL bEle, C* c, R (CT::*f)(A1,A2,A3,A4), const char* pFunName){
#~ ## ~ return XEle_RegEventCPP_tt<R>(hXCGUI,nEvent,type,bEle,(CT*)c,f, pFunName);}
#~ ## ~ template<class R, class C, class CT,class A1, class A2, class A3, class A4, class A5>
#~ ## ~ BOOL XCGUI_RegEventCPP_t(HXCGUI hXCGUI, UINT nEvent, int type, BOOL bEle, C* c, R (CT::*f)(A1,A2,A3,A4,A5), const char* pFunName){
#~ ## ~ return XEle_RegEventCPP_tt<R>(hXCGUI,nEvent,type,bEle,(CT*)c,f, pFunName);}
#~ ## ~ #define XEle_RegEventCPP(hXCGUI,Event,mFun)  XCGUI_RegEventCPP_t(hXCGUI,Event,0,TRUE,this,mFun,#mFun)
#~ ## ~ #define XEle_RegEventCPP1(hXCGUI,Event,mFun)  XCGUI_RegEventCPP_t(hXCGUI,Event,1,TRUE,this,mFun,#mFun)
#~ ## ~ #define XEle_RegEventCPP2(hXCGUI,Event,mFun)  XCGUI_RegEventCPP_t(hXCGUI,Event,2,TRUE,this,mFun,#mFun)
#~ ## ~ #define XEle_RemoveEventCPP(hXCGUI,Event,mFun) XCGUI_RegEventCPP_t(hXCGUI,Event,-1,TRUE,this,mFun,#mFun)
#~ ## ~ #define XWnd_RegEventCPP(hXCGUI,Event,mFun)  XCGUI_RegEventCPP_t(hXCGUI,Event,0,FALSE,this,mFun,#mFun)
#~ ## ~ #define XWnd_RegEventCPP1(hXCGUI,Event,mFun)  XCGUI_RegEventCPP_t(hXCGUI,Event,1,FALSE,this,mFun,#mFun)
#~ ## ~ #define XWnd_RemoveEventCPP(hXCGUI,Event,mFun) XCGUI_RegEventCPP_t(hXCGUI,Event,-1,FALSE,this,mFun,#mFun)
#~ ## ~ //hEle      接收事件的元素句柄
#~ ## ~ //hEventEle 触发事件的元素句柄
#~ ## ~ //////////////////////////////////////////////////////////////////////


proc XCloudUI_Init*(): BOOL {.cdecl, importc: "XCloudUI_Init", dynlib: xcgui, discardable.}

proc XCloudUI_OpenAppCmd*(pCmdLine: ptr WCHAR): BOOL {.cdecl,
    importc: "XCloudUI_OpenAppCmd", dynlib: xcgui, discardable.}

proc XCloudUI_Exit*() {.cdecl, importc: "XCloudUI_Exit", dynlib: xcgui, discardable.}

proc XCloudUI_EnableDependBrowser*(bEnable: BOOL) {.cdecl,
    importc: "XCloudUI_EnableDependBrowser", dynlib: xcgui, discardable.}

proc XCloudUI_EnableTipsWindow*(bEnable: BOOL) {.cdecl,
    importc: "XCloudUI_EnableTipsWindow", dynlib: xcgui, discardable.}

proc XCloudUI_OpenUrl*(pUrl: ptr WCHAR): BOOL {.cdecl, importc: "XCloudUI_OpenUrl",
    dynlib: xcgui, discardable.}

#~ proc XCloudUI_SetEventCallback*(pFun: funCloudEvent) {.cdecl,
    #~ importc: "XCloudUI_SetEventCallback", dynlib: xcgui, discardable.}


proc XCloudUI_GetAppDir*(pOut: ptr WCHAR; nOutlen: cint): cint {.cdecl,
    importc: "XCloudUI_GetAppDir", dynlib: xcgui, discardable.}

proc XDateTime_Create*(x: cint; y: cint; cx: cint; cy: cint; hParent: HXCGUI): HELE {.cdecl,
    importc: "XDateTime_Create", dynlib: xcgui, discardable.}

proc XDateTime_SetStyle*(hEle: HELE; nStyle: cint) {.cdecl,
    importc: "XDateTime_SetStyle", dynlib: xcgui, discardable.}

proc XDateTime_GetStyle*(hEle: HELE): cint {.cdecl, importc: "XDateTime_GetStyle",
    dynlib: xcgui, discardable.}

proc XDateTime_EnableSplitSlash*(hEle: HELE; bSlash: BOOL) {.cdecl,
    importc: "XDateTime_EnableSplitSlash", dynlib: xcgui, discardable.}

proc XDateTime_GetTime*(hEle: HELE; pnHour: ptr cint; pnMinute: ptr cint;
                       pnSecond: ptr cint) {.cdecl, importc: "XDateTime_GetTime",
    dynlib: xcgui, discardable.}
